--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,45 +24,14 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/UKK_ANGGIE_RPL2.jar
+dist.jar=${dist.dir}/AnggieUKK_.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.commons-beanutils-1.8.2-sources.jar=C:\\Users\\LENOVO\\Documents\\NetBeansProjects\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\commons-beanutils-1.8.2-sources.jar
-file.reference.commons-collections-3.2.1.jar=C:\\Users\\LENOVO\\Documents\\NetBeansProjects\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\commons-collections-3.2.1.jar
-file.reference.commons-digester-1.7.jar=C:\\Users\\LENOVO\\Documents\\NetBeansProjects\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\commons-digester-1.7.jar
-file.reference.commons-logging-1.1.1.jar=C:\\Users\\LENOVO\\Documents\\NetBeansProjects\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\commons-logging-1.1.1.jar
-file.reference.groovy-all-2.0.1.jar=C:\\Users\\LENOVO\\Documents\\NetBeansProjects\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\groovy-all-2.0.1.jar
-file.reference.jasper-compiler-jdt-5.5.23.jar=C:\\Users\\LENOVO\\Documents\\NetBeansProjects\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\jasper-compiler-jdt-5.5.23.jar
-file.reference.jasperreports-6.4.1.jar=C:\\Users\\LENOVO\\Documents\\NetBeansProjects\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\jasperreports-6.4.1.jar
-file.reference.jasperreports-fonts-6.5.0.jar=C:\\Users\\LENOVO\\Documents\\NetBeansProjects\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\jasperreports-fonts-6.5.0.jar
-file.reference.jasperreports-javaflow-6.5.0.jar=C:\\Users\\LENOVO\\Documents\\NetBeansProjects\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\jasperreports-javaflow-6.5.0.jar
-file.reference.jcalendar-1.3.2.jar=C:\\Users\\LENOVO\\Documents\\NetBeansProjects\\APLIKASI PENJUALAN BARANG\\jcalendar-1.3.2.jar
-file.reference.jcommon-1.0.17.jar=C:\\Users\\LENOVO\\Documents\\NetBeansProjects\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\jcommon-1.0.17.jar
-file.reference.jfreechart-1.0.13.jar=C:\\Users\\LENOVO\\Documents\\NetBeansProjects\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\jfreechart-1.0.13.jar
-file.reference.JTattoo-1.6.11.jar=C:\\Users\\LENOVO\\Documents\\NetBeansProjects\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\JTattoo-1.6.11.jar
-file.reference.poi-ooxml-3.9.jar=C:\\Users\\LENOVO\\Documents\\NetBeansProjects\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\poi-ooxml-3.9.jar
-file.reference.rs2xml.jar=C:\\Users\\LENOVO\\Documents\\NetBeansProjects\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\APLIKASI PENJUALAN BARANG\\NEW_UJI_LEVEL\\ALL JASPER\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${libs.MySQLDriver.classpath}:\
-    ${file.reference.jcalendar-1.3.2.jar}:\
-    ${libs.JasperReports.classpath}:\
-    ${file.reference.JTattoo-1.6.11.jar}:\
-    ${file.reference.commons-beanutils-1.8.2-sources.jar}:\
-    ${file.reference.commons-collections-3.2.1.jar}:\
-    ${file.reference.commons-digester-1.7.jar}:\
-    ${file.reference.commons-logging-1.1.1.jar}:\
-    ${file.reference.groovy-all-2.0.1.jar}:\
-    ${file.reference.jasper-compiler-jdt-5.5.23.jar}:\
-    ${file.reference.jasperreports-6.4.1.jar}:\
-    ${file.reference.jasperreports-fonts-6.5.0.jar}:\
-    ${file.reference.jasperreports-javaflow-6.5.0.jar}:\
-    ${file.reference.jcommon-1.0.17.jar}:\
-    ${file.reference.jfreechart-1.0.13.jar}:\
-    ${file.reference.poi-ooxml-3.9.jar}:\
-    ${file.reference.rs2xml.jar}
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -87,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=koneksi.koneksi
+main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
